--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_signin_button: ^2.0.0
+  firebase_core: ^1.20.1
+  google_sign_in: ^5.4.1
+  firebase_auth: ^3.6.3
 
 dev_dependencies:
   flutter_test:
